--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
             <img class="avatar" src="./image/photo.png" alt="avatar">
         </div>
         <div class="app-right-content">
+            <div class="editor-content" contenteditable="true"></div>
 
         </div>
     </div>
