--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <header style="width:100%;height: 24px;-webkit-app-region: drag"></header>
     <div class="app-wrapper">
         <div class="app-left-side">
             <div class="app-left-side-inner">
@@ -32,12 +33,15 @@
 
     <script>
         window.onload = function () {
-            var editor = document.querySelector(".editor-content");
+            var editor = $elOne(".editor-content");
             editor.oninput = function () {
                 console.log(editor.value);
             }
         }
-        function $attr(attr){
+        function $elOne(attr){
+            return document.querySelector(attr);
+        }
+        function $elAll(attr){
             return document.querySelectorAll(attr);
         }
         require('./main_process/link')
