--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,9 @@
                 console.log(editor.value);
             }
         }
+        function $el(selecter){
+
+        }
         function $elOne(attr){
             return document.querySelector(attr);
         }
