--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-    <header class="app-header" style="width:100%;height: 24px;-webkit-app-region: drag">
+    <!-- <header class="app-header" style="width:100%;height: 24px;-webkit-app-region: drag">
         <div>创客</div>
         <div class="header-action">
             <span class="app-min fa fa-window-minimize"></span>
             <span class="app-max fa fa-window-maximize"></span>
             <span class="app-close fa fa-close"></span>
         </div>
-    </header>
+    </header> -->
     <div class="app-wrapper">
         <div class="app-left-side">
             <div class="app-left-side-inner">
