--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,53 @@
     <title>创客</title>
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+        span{
+                width: 46px;
+                display: inline-block;
+                text-align: center;
+        }
+        span:hover{
+            background: #e5e5e5;
+        }
+        .window-close:hover{
+            background: #e81123;
+
+        }
+        .window-close:hover svg{
+                fill: #ffffff;
+            color: #ffffff;
+        }
+    </style>
 </head>
 
 <body>
-    <header class="app-header" style="width:100%;height: 24px;-webkit-app-region: drag">
-        <div>创客</div>
+    <header class="app-header" style="width:100%;height: 24px;-webkit-app-region: drag;cursor: default;">
+        <div style="font: 13px/24px sans-serif;">创客</div>
         <div class="header-action">
-            <span class="app-min fa fa-window-minimize"></span>
-            <span class="app-max fa fa-window-maximize"></span>
-            <span class="app-close fa fa-close"></span>
+    <span>
+        <svg aria-hidden="true" version="1.1" width="10" height="10">
+            <path d="M 0,5 10,5 10,6 0,6 Z"></path>
+        </svg>
+    </span>
+    <span >
+        <svg aria-hidden="true" version="1.1" width="10" height="10">
+            <path d="M 0,0 0,10 10,10 10,0 Z M 1,1 9,1 9,9 1,9 Z"></path>
+        </svg>
+    </span>
+    <span>
+        <svg aria-hidden="true" version="1.1" width="10" height="10">
+            <path d="m 2,1e-5 0,2 -2,0 0,8 8,0 0,-2 2,0 0,-8 z m 1,1 6,0 0,6 -1,0 0,-5 -5,0 z m -2,2 6,0 0,6 -6,0 z">
+            </path>
+        </svg>
+    </span>
+    <span class="window-close">
+        <svg aria-hidden="true" version="1.1" width="10" height="10">
+            <path
+                d="M 0,0 0,0.7 4.3,5 0,9.3 0,10 0.7,10 5,5.7 9.3,10 10,10 10,9.3 5.7,5 10,0.7 10,0 9.3,0 5,4.3 0.7,0 Z">
+            </path>
+        </svg>
+    </span>
         </div>
     </header>
     <div class="app-wrapper">
