--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,12 @@
 				z-index: 1000;
 				-webkit-app-region: no-drag;
 			}
-
+			.window-max-restore {
+				display: none;
+			}
+			.window-max-restore.active {
+				display: inline-block;
+			}
 			.window-title {
 				width: 35px;
 				position: relative;
@@ -65,17 +70,17 @@
 					创客
 				</div>
 				<div class="window-controls-tool">
-					<span>
+					<span class="window-minimize">
 						<svg aria-hidden="true" version="1.1" width="10" height="10">
 							<path d="M 0,5 10,5 10,6 0,6 Z"></path>
 						</svg>
 					</span>
-					<span>
+					<span class="window-max-restore window-max active" data-windowflag="max">
 						<svg aria-hidden="true" version="1.1" width="10" height="10">
 							<path d="M 0,0 0,10 10,10 10,0 Z M 1,1 9,1 9,9 1,9 Z"></path>
 						</svg>
 					</span>
-					<span>
+					<span class="window-max-restore window-normal" data-windowflag="normal">
 						<svg aria-hidden="true" version="1.1" width="10" height="10">
 							<path
 								d="m 2,1e-5 0,2 -2,0 0,8 8,0 0,-2 2,0 0,-8 z m 1,1 6,0 0,6 -1,0 0,-5 -5,0 z m -2,2 6,0 0,6 -6,0 z"
@@ -111,24 +116,21 @@
 
 		<script>
 			window.onload = function () {
-				var editor = $el('.editor-content')[0];
+				var editor = $el('.editor-content');
 				editor.oninput = function () {
 					console.log(editor.value);
-				};
-
-				$el('.window-close')[0].onclick = function () {
-					alert(90);
 				};
 			};
 
 			function $el(selecter) {
-				return document.querySelectorAll(selecter);
+				return document.querySelector(selecter);
 			}
 
 			function $elAll(attr) {
 				return document.querySelectorAll(attr);
 			}
-			require('./main_process/link');
+			require('./render/link');
+			require('./render/window-btn.js');
 		</script>
 	</body>
 </html>
