--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,7 @@
 						<nav class="nav">
 							<ul>
 								<li class="nav-item">
-									使用系统
-									<em>对话框</em>
+									系统对话框
 								</li>
 								<li class="nav-item"></li>
 								<li class="nav-item"></li>
