--- a/src/index.html
+++ b/src/index.html
@@ -1,102 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<meta
-			http-equiv="Content-Security-Policy"
-			content="script-src 'self' 'unsafe-inline';object-src 'self';"
-		/>
-		<title>创客</title>
-		<link rel="stylesheet" href="style.css" />
-	</head>
 
-	<body>
-		<div class="window-body-wrapper">
-			<header class="window-toolbar">
-				<div class="titlebar-drag-region"></div>
-				<div class="window-title">
-					创客
-				</div>
-				<div class="window-controls-tool">
-					<span class="window-minimize">
-						<svg aria-hidden="true" version="1.1" width="10" height="10">
-							<path d="M 0,5 10,5 10,6 0,6 Z"></path>
-						</svg>
-					</span>
-					<span class="window-max-restore window-max active" data-windowflag="max">
-						<svg aria-hidden="true" version="1.1" width="10" height="10">
-							<path d="M 0,0 0,10 10,10 10,0 Z M 1,1 9,1 9,9 1,9 Z"></path>
-						</svg>
-					</span>
-					<span class="window-max-restore window-normal" data-windowflag="normal">
-						<svg aria-hidden="true" version="1.1" width="10" height="10">
-							<path
-								d="m 2,1e-5 0,2 -2,0 0,8 8,0 0,-2 2,0 0,-8 z m 1,1 6,0 0,6 -1,0 0,-5 -5,0 z m -2,2 6,0 0,6 -6,0 z"
-							></path>
-						</svg>
-					</span>
-					<span class="window-close">
-						<svg aria-hidden="true" version="1.1" width="10" height="10">
-							<path
-								d="M 0,0 0,0.7 4.3,5 0,9.3 0,10 0.7,10 5,5.7 9.3,10 10,10 10,9.3 5.7,5 10,0.7 10,0 9.3,0 5,4.3 0.7,0 Z"
-							></path>
-						</svg>
-					</span>
-				</div>
-			</header>
-			<div class="window-container">
-				<div class="app-left-side scrollbar">
-					<div class="app-left-side-inner">
-						<img class="avatar" src="./image/photo.png" alt="avatar" />
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';object-src 'self';" />
+	<title>创客</title>
+	<link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+	<div class="window-body-wrapper">
+		<header class="window-toolbar">
+			<div class="titlebar-drag-region"></div>
+			<div class="window-title">
+				创客
+			</div>
+			<div class="window-controls-tool">
+				<span class="window-minimize">
+					<svg aria-hidden="true" version="1.1" width="10" height="10">
+						<path d="M 0,5 10,5 10,6 0,6 Z"></path>
+					</svg>
+				</span>
+				<span class="window-max-restore window-max active" data-windowflag="max">
+					<svg aria-hidden="true" version="1.1" width="10" height="10">
+						<path d="M 0,0 0,10 10,10 10,0 Z M 1,1 9,1 9,9 1,9 Z"></path>
+					</svg>
+				</span>
+				<span class="window-max-restore window-normal" data-windowflag="normal">
+					<svg aria-hidden="true" version="1.1" width="10" height="10">
+						<path
+							d="m 2,1e-5 0,2 -2,0 0,8 8,0 0,-2 2,0 0,-8 z m 1,1 6,0 0,6 -1,0 0,-5 -5,0 z m -2,2 6,0 0,6 -6,0 z">
+						</path>
+					</svg>
+				</span>
+				<span class="window-close">
+					<svg aria-hidden="true" version="1.1" width="10" height="10">
+						<path
+							d="M 0,0 0,0.7 4.3,5 0,9.3 0,10 0.7,10 5,5.7 9.3,10 10,10 10,9.3 5.7,5 10,0.7 10,0 9.3,0 5,4.3 0.7,0 Z">
+						</path>
+					</svg>
+				</span>
+			</div>
+		</header>
+		<div class="window-container">
+			<div class="app-left-side scrollbar">
+				<div class="app-left-side-inner">
+					<img class="avatar" src="./image/photo.png" alt="avatar" />
+					<ul>
+						<li>
+							<a href="http://github.com">github</a>
+						</li>
+					</ul>
+					<nav class="nav">
 						<ul>
-							<li>
-								<a href="http://github.com">github</a>
+							<li class="nav-item">
+								系统对话框
 							</li>
+							<li class="nav-item"></li>
+							<li class="nav-item"></li>
+							<li class="nav-item"></li>
+							<li class="nav-item"></li>
+							<li class="nav-item"></li>
+							<li class="nav-item"></li>
+							<li class="nav-item"></li>
+							<li class="nav-item"></li>
+							<li class="nav-item"></li>
 						</ul>
-						<nav class="nav">
-							<ul>
-								<li class="nav-item">
-									系统对话框
-								</li>
-								<li class="nav-item"></li>
-								<li class="nav-item"></li>
-								<li class="nav-item"></li>
-								<li class="nav-item"></li>
-								<li class="nav-item"></li>
-								<li class="nav-item"></li>
-								<li class="nav-item"></li>
-								<li class="nav-item"></li>
-								<li class="nav-item"></li>
-							</ul>
-						</nav>
-					</div>
-				</div>
-				<div class="app-right-content">
-					<!-- <div class="editor-content" contenteditable="true"></div> -->
-					<textarea name="editor" class="editor-content"></textarea>
+					</nav>
 				</div>
 			</div>
+			<div class="app-right-content">
+				<!-- <div class="editor-content" contenteditable="true"></div> -->
+				<textarea name="editor" class="editor-content"></textarea>
+			</div>
 		</div>
+	</div>
 
-		<script>
-			window.onload = function () {
-				var editor = $el('.editor-content');
-				editor.oninput = function () {
-					console.log(editor.value);
-				};
+	<script>
+		window.onload = function () {
+			var editor = $el('.editor-content');
+			editor.oninput = function () {
+				console.log(editor.value);
 			};
+		};
 
-			function $el(selecter) {
-				return document.querySelector(selecter);
-			}
+		function $el(selecter) {
+			return document.querySelector(selecter);
+		}
 
-			function $elAll(attr) {
-				return document.querySelectorAll(attr);
-			}
-			require('./render/link');
-			require('./render/window-btn.js');
-		</script>
-	</body>
+		function $elAll(attr) {
+			return document.querySelectorAll(attr);
+		}
+		require('./render/link');
+		require('./render/window-btn.js');
+	</script>
+</body>
+
 </html>
