--- a/src/index.html
+++ b/src/index.html
@@ -47,12 +47,8 @@
 		<div class="window-container">
 			<div class="app-left-side scrollbar">
 				<div class="app-left-side-inner">
-					<img class="avatar" src="./image/photo.png" alt="avatar" />
-					<ul>
-						<li>
-							<a href="http://github.com">github</a>
-						</li>
-					</ul>
+					<img class="avatar" src="./image/photo.png" alt="avatar" title="触摸指尖的温暖" />
+					<span class="title">触摸指尖的温暖</span>
 					<nav class="nav">
 						<ul>
 							<li class="nav-item">
