--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,100 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';object-src 'self';" />
 	<title>创客</title>
+	<!-- <link rel="stylesheet" href="desktop.css"> -->
 	<link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 	<div class="window-body-wrapper">
 		<header class="window-toolbar">
-			<div class="titlebar-drag-region"></div>
-			<div class="window-title">
-				创客
+			<!-- <div class="titlebar-drag-region"></div> -->
+			<div class="window-title">创客</div>
+			<div id="app-menu-bar" role="menubar" aria-label="Application menu">
+				<div class="toolbar-dropdown closed" role="menuitem" aria-expanded="false">
+					<div class="toolbar-button">
+						<button class="button-component" type="button" tabindex="-1">
+							<div class="menu-item">
+								<div class="label">
+									<span aria-label="File">
+										<span aria-hidden="true" class="access-key">F</span>
+										<span aria-hidden="true">ile</span>
+									</span>
+								</div>
+							</div>
+						</button>
+					</div>
+				</div>
+				<div class="toolbar-dropdown closed" role="menuitem" aria-expanded="false">
+					<div class="toolbar-button">
+						<button class="button-component" type="button" tabindex="-1">
+							<div class="menu-item">
+								<div class="label">
+									<span aria-label="Edit">
+										<span aria-hidden="true" class="access-key">E</span>
+										<span aria-hidden="true">dit</span>
+									</span>
+								</div>
+							</div>
+						</button>
+					</div>
+				</div>
+				<div class="toolbar-dropdown closed" role="menuitem" aria-expanded="false">
+					<div class="toolbar-button">
+						<button class="button-component" type="button" tabindex="-1">
+							<div class="menu-item">
+								<div class="label">
+									<span aria-label="View">
+										<span aria-hidden="true" class="access-key">V</span>
+										<span aria-hidden="true">iew</span>
+									</span>
+								</div>
+							</div>
+						</button>
+					</div>
+				</div>
+				<div class="toolbar-dropdown closed" role="menuitem" aria-expanded="false">
+					<div class="toolbar-button">
+						<button class="button-component" type="button" tabindex="-1">
+							<div class="menu-item">
+								<div class="label">
+									<span aria-label="Repository">
+										<span aria-hidden="true" class="access-key">R</span>
+										<span aria-hidden="true">epository</span>
+									</span>
+								</div>
+							</div>
+						</button>
+					</div>
+				</div>
+				<div class="toolbar-dropdown closed" role="menuitem" aria-expanded="false">
+					<div class="toolbar-button">
+						<button class="button-component" type="button" tabindex="-1">
+							<div class="menu-item">
+								<div class="label">
+									<span aria-label="Branch">
+										<span aria-hidden="true" class="access-key">B</span>
+										<span aria-hidden="true">ranch</span>
+									</span>
+								</div>
+							</div>
+						</button>
+					</div>
+				</div>
+				<div class="toolbar-dropdown closed" role="menuitem" aria-expanded="false">
+					<div class="toolbar-button">
+						<button class="button-component" type="button" tabindex="-1">
+							<div class="menu-item">
+								<div class="label">
+									<span aria-label="Help">
+										<span aria-hidden="true" class="access-key">H</span>
+										<span aria-hidden="true">elp</span>
+									</span>
+								</div>
+							</div>
+						</button>
+					</div>
+				</div>
 			</div>
 			<div class="window-controls-tool">
 				<span class="window-minimize">
