--- a/src/index.html
+++ b/src/index.html
@@ -104,28 +104,16 @@
 			</div>
 			<div class="window-controls-tool">
 				<span class="window-minimize">
-					<svg aria-hidden="true" version="1.1" width="10" height="10">
-						<path d="M 0,5 10,5 10,6 0,6 Z"></path>
-					</svg>
+					<img src="./image/minimize.svg" alt="minimize">
 				</span>
 				<span class="window-max-restore window-max active" data-windowflag="max">
-					<svg aria-hidden="true" version="1.1" width="10" height="10">
-						<path d="M 0,0 0,10 10,10 10,0 Z M 1,1 9,1 9,9 1,9 Z"></path>
-					</svg>
+					<img src="./image/max.svg" alt="max">
 				</span>
 				<span class="window-max-restore window-normal" data-windowflag="normal">
-					<svg aria-hidden="true" version="1.1" width="10" height="10">
-						<path
-							d="m 2,1e-5 0,2 -2,0 0,8 8,0 0,-2 2,0 0,-8 z m 1,1 6,0 0,6 -1,0 0,-5 -5,0 z m -2,2 6,0 0,6 -6,0 z">
-						</path>
-					</svg>
+					<img src="./image/normal.svg" alt="normal">
 				</span>
 				<span class="window-close">
-					<svg aria-hidden="true" version="1.1" width="10" height="10">
-						<path
-							d="M 0,0 0,0.7 4.3,5 0,9.3 0,10 0.7,10 5,5.7 9.3,10 10,10 10,9.3 5.7,5 10,0.7 10,0 9.3,0 5,4.3 0.7,0 Z">
-						</path>
-					</svg>
+					<img src="./image/close.svg" alt="close">
 				</span>
 			</div>
 		</header>
