更新依赖包版本，添加托盘功能

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';object-src 'self';" />
 	<title>创客</title>
-	<link rel="shortcut icon" href="32x32.ico" type="image/x-icon">
+<!--	<link rel="shortcut icon" href="32x32.ico" type="image/x-icon">-->
 	<!-- <link rel="stylesheet" href="desktop.css"> -->
 	<link rel="stylesheet" href="style.css" />
 </head>
