--- a/src/render/index.html
+++ b/src/render/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';object-src 'self';" />
 	<title>创客</title>
-<!--	<link rel="shortcut icon" href="32x32.ico" type="image/x-icon">-->
+	<!--	<link rel="shortcut icon" href="32x32.ico" type="image/x-icon">-->
 	<!-- <link rel="stylesheet" href="desktop.css"> -->
 	<link rel="stylesheet" href="style.css" />
 </head>
@@ -154,9 +154,9 @@
 		function $elAll(attr) {
 			return document.querySelectorAll(attr);
 		}
-		require('./render/link');
-		require('./render/window-btn.js');
-		require('./render/appUpdate.js');
+		require('./plugin/link');
+		require('./plugin/window-btn.js');
+		require('./plugin/appUpdate.js');
 	</script>
 </body>
 
